--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,13 @@ h1 {
   line-height: 1.1;
 }
 
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
